<resources>
    <string name="app_name">Wi-FiShareDemo</string>
    <string name="start_wifi_sharing">Start Wi-Fi sharing</string>
    <string name="stop_wifi_sharing">Stop Wi-Fi sharing</string>
    <string name="stop_wifi_connecting">Stop Wi-Fi connecting</string>
    <string name="click_to_share_wifi">Share Wi-Fi</string>
    <string name="click_to_connect_wifi">Connect Wi-Fi</string>
    <string name="device_list">Nearby Devices:</string>
    <string name="auth_code">Auth code: </string>
    <string name="string_share_wifi_title">If the device has already connected to Wi-Fi, click on the button to share the Wi-Fi connection.</string>
    <string name="string_connect_wifi_title">If the device is not yet connected to Wi-Fi, click on the button to connect.</string>
</resources>
