<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/button_connect_wifi"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_alignParentRight="true"
                android:text="@string/click_to_connect_wifi"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:background="@drawable/selector_btn_bg"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/button_connect_wifi"
                android:gravity="center_vertical|left"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:text="@string/string_connect_wifi_title"
                android:textColor="#000000"
                android:textSize="14sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <Button
                android:id="@+id/button_share_wifi"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:text="@string/click_to_share_wifi"
                android:textColor="#ffffff"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textSize="14sp"
                android:background="@drawable/selector_btn_bg"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/button_share_wifi"
                android:gravity="center_vertical|left"
                android:layout_marginRight="5dp"
                android:layout_centerVertical="true"
                android:text="@string/string_share_wifi_title"
                android:textColor="#000000"
                android:textSize="14sp" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorPrimary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="15dp"
            android:text="@string/device_list"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/authCodeText"
        android:layout_below="@+id/ll_top"/>

    <TextView
        android:id="@+id/authCodeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>